--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -15,13 +15,17 @@
   gap: 1rem;
 }
 
-/* .new-btn {
+.new-btn {
   font-weight: bold;
   border: 1px solid #fff;
   padding: .5rem 1rem;
   border-radius: 1rem;
+  opacity: 0.7;
+}
+
+.new-btn:hover {
   opacity: 1;
-} */
+}
 
 .bem-vindo {
   font-size: 18px;
