--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,13 @@
 .container {
   /* max-width: 1000px; */
   /* width: 100vw; */
-  margin: 2rem auto;
-  padding: 0 2rem;
+  /* padding: 0 2rem; */
   font-size: 25px;
+  height: 75vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .App {
@@ -11,5 +15,5 @@
 }
 
 .App h1 {
-  margin-top: 30px;
+  margin: 30px 0;
 }
