--- a/frontend/src/Pages/Home.css
+++ b/frontend/src/Pages/Home.css
@@ -1,7 +1,52 @@
+.home {
+  text-align: left;
+  margin-bottom: 20px;
+  height: 70vh;
+  width: 50rem;
+}
+
 .home p {
   margin-bottom: 20px;
 }
 
 .home a {
   color: blue;
+}
+
+.links {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 50px;
+}
+
+.links a {
+  align-items: center;
+  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+  border: 0;
+  border-radius: 8px;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  display: flex;
+  font-family: Phantomsans, sans-serif;
+  font-size: 20px;
+  justify-content: center;
+  line-height: 1em;
+  max-width: 100%;
+  min-width: 50rem;
+  padding: 14px 19px;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  cursor: pointer;
+}
+
+.links a:active,
+.links a:hover {
+  outline: 0;
 }
