--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -16,11 +16,24 @@
 }
 
 .new-btn {
-  font-weight: bold;
-  border: 1px solid #fff;
-  padding: .5rem 1rem;
-  border-radius: 1rem;
-  opacity: 0.7;
+  align-items: center;
+  background-image: linear-gradient(144deg,#AF40FF, #5B42F3 50%,#00DDEB);
+  border: 0;
+  border-radius: 8px;
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  display: flex;
+  font-family: Phantomsans, sans-serif;
+  font-size: 20px;
+  justify-content: center;
+  line-height: 1em;
+  max-width: 100%;
+  padding: 14px 19px;
+  text-decoration: none;
+  user-select: none;
+  white-space: nowrap;
+  cursor: pointer;
 }
 
 .new-btn:hover {
